ec2.yaml
--- 
AWSTemplateFormatVersion: '2010-09-09'
Description: This is the EC2 stack to deploy the compute platform - version1.0
Parameters:
  InstanceType:
    Description: WebServer EC2 instance type (has default, AllowedValues)
    Type: String
    Default: t2.micro
    AllowedValues:
      - t1.micro
      - t2.nano
      - t2.micro
      - t2.small
    ConstraintDescription: must be a valid EC2 instance type.

Resources:
  MyInstance: 
    Properties: 
      AvailabilityZone: ca-central-1a
      ImageId: ami-0101734ab73bd9e15
      InstanceType: !Ref InstanceType
      SecurityGroups: 
        - !Ref ServerSecurityGroup
        - !Ref SSHSecurityGroup
    Type: "AWS::EC2::Instance"
  
  MyEIP:
    Properties:
      InstanceId: !Ref MyInstance
    Type: "AWS::EC2::EIP"

  CoreVPC:
    Type: AWS::EC2::VPC
    Description: VPC to operate 
    Properties: 
      CidrBlock: 10.0.0.0/16
      InstanceTenancy: default
      Tags:
        - Key: ServiceTier
          Value: NonProduction

  SSHSecurityGroup:
    Properties:
      GroupDescription: "Enable Security for Server"
      #VpcId: !Ref CoreVPC
      SecurityGroupIngress:
        -
          CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: TCP
          ToPort: 22
    Type: "AWS::EC2::SecurityGroup"
  
  ServerSecurityGroup: 
    Properties: 
      GroupDescription: "Enable Security for Server"
      #VpcId: !Ref CoreVPC
      SecurityGroupIngress: 
        - 
          CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: TCP
          ToPort: 80
    Type: "AWS::EC2::SecurityGroup"

Outputs:
  MyInstanceIP:
    Description: EC2 public IP
    Value: !GetAtt MyInstance.PublicIp
